# lab2

./: README.md
autotools/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  hello  hello.c
autotools/.deps/: hello.Po
autotools/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.3
cmake/: CMakeLists.txt  bar.c  foo.c  main.c
libexamples/: Makefile  dl_main  dlmain.c  gmon.out  main.c  shared_main  static_main
libexamples/lib/: Makefile  add.c  arithmetic.h  div.c  mul.c  sub.c
matrix/: Makefile  add  add.cpp  add_matrix  add_matrix.c
matrix/matrix_rust/: Cargo.toml
matrix/matrix_rust/src/: main.rs
my_assert/: my_assert  my_assert.c
my_perror/: my_perror_use  my_perror_use.c
rcs/: rcs.txt
rcs/RCS/: rcs.txt,v
treeSearch/: treecpp  treecpp.cpp  treesearch  treesearch.c
treeSearch/treerst/: Cargo.toml
treeSearch/treerst/src/: main.rs
vscode/: Makefile  foo.c  foobar  main.c
